--- a/app/app.global.css
+++ b/app/app.global.css
@@ -1,10 +1,20 @@
-/* @import url('https://fonts.googleapis.com/css?family=Roboto+Condensed:700&display=swap'); */
-
+@import url('https://fonts.googleapis.com/css?family=Roboto+Condensed:700&display=swap');
 body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: 'Roboto Condensed', sans-serif;
+}
+.container {
+  width: 100%;
+  height: 100vh;
+  background-image: url('./assets/img/bg.jpg');
+  background-color: #d9000d;
+  position: relative;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .logo {
@@ -14,6 +24,9 @@ body {
   right: 24px;
 }
 
+.logo__img {
+  width: 300px;
+}
 .pizza {
   width: 45%;
   height: auto;
@@ -71,24 +84,31 @@ body {
   border: none;
 }
 
-#scanner {
-  width: 100%;
-  height: 100%;
+.btn__secondary {
+  padding: 1em 2em;
+  font-size: 32px;
+  color: white;
+  border-radius: 4px;
+  box-sizing: border-box;
+  text-decoration: none;
+}
+
+.premio__content,
+.text__content {
+  margin: auto;
   text-align: center;
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
 
-#preview {
-  display: inline;
+.premio__content {
+  z-index: 100;
 }
 
-.container {
-  width: 100%;
-  height: 100vh;
-  background-image: url('./assets/img/bg.jpg');
-  background-color: #d9000d;
-  position: relative;
-  overflow: hidden;
+.ganaste__content {
+  position: absolute;
+  top: 10px;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  text-align: center;
+  bottom: auto;
 }
